# AquamarineQt

./: .gitignore  CMakeLists.txt  README.md  init.sh
src/: CMakeLists.txt  main.cpp
src/info/: target.cpp  target.h  targetrepository.cpp  targetrepository.h
src/models/: targettablemodel.cpp  targettablemodel.h
src/utils/: angle.cpp  angle.h  frameless.cpp  frameless.h  randomgenerator.cpp  randomgenerator.h
src/widgets/: controlpanel.cpp  controlpanel.h  mainwindow.cpp  mainwindow.h  mapwidget.cpp  mapwidget.h  widgettime.cpp  widgettime.h
